--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "babel-loader": "^8.1.0",
     "core-js": "3.7.0",
     "css-loader": "^5.0.1",
-    "jest": "^26.6.3",
     "eslint": "7.13.0",
     "eslint-config-prettier": "6.15.0",
     "eslint-config-recommended": "4.1.0",
@@ -25,16 +24,28 @@
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^26.6.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-styleguidist": "^11.1.1",
+    "react-styleguidist": "^11.1.5",
     "style-loader": "^2.0.0",
     "webpack": "^4.44.2"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "prop-types": "^15.7.2",
-    "styled-components": "^5.2.1"
+    "react-docgen-typescript": "^1.20.5",
+    "scripture-resources-rcl": "file:.yalc/scripture-resources-rcl",
+    "source-map-loader": "^1.1.3",
+    "styled-components": "^5.2.1",
+    "ts-loader": "^8.0.12",
+    "typescript": "^4.1.3",
+    "word-aligner": "^1.0.0"
   },
   "name": "single-scripture-rcl",
   "version": "0.1.0",
