--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "scripture-resources-rcl": "file:.yalc/scripture-resources-rcl",
     "source-map-loader": "^1.1.3",
     "styled-components": "^5.2.1",
+    "translation-helps-rcl": "0.6.5",
     "ts-loader": "^8.0.12",
     "typescript": "^4.1.3",
     "word-aligner": "^1.0.0"
