--- a/package.json
+++ b/package.json
@@ -3,13 +3,24 @@
     "test": "jest",
     "start": "styleguidist server",
     "build": "styleguidist build",
-    "prepublishOnly": "rm -fr ./dist & babel ./src --out-dir ./dist -s inline --extensions \".ts,.js\""
+    "prepublishOnly": "rm -fr ./dist && babel ./src --out-dir ./dist -s inline --extensions \".ts,.js\""
+  },
+  "peerDependencies": {
+    "@material-ui/core": "4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "4.0.0-alpha.56",
+    "prop-types": "^15.x",
+    "react": "^17.x",
+    "react-dom": "^17.x"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@unfoldingword/eslint-config": "1.3.0",
     "babel-loader": "^8.1.0",
     "core-js": "3.7.0",
@@ -33,14 +44,10 @@
     "webpack": "^4.44.2"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.2",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.57",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "prop-types": "^15.7.2",
     "react-docgen-typescript": "^1.20.5",
-    "scripture-resources-rcl": "file:.yalc/scripture-resources-rcl",
+    "scripture-resources-rcl": "3.0.1",
     "source-map-loader": "^1.1.3",
     "styled-components": "^5.2.1",
     "translation-helps-rcl": "0.6.5",
