--- a/package.json
+++ b/package.json
@@ -1,4 +1,13 @@
 {
+  "name": "single-scripture-rcl",
+  "version": "0.1.1-alpha.2",
+  "repository": "https://github.com/unfoldingWord-box3/single-scripture-rcl.git",
+  "author": "RoyalSix <jay.a.scottjr@biola.edu>",
+  "license": "MIT",
+  "main": "dist/index.js",
+  "files": [
+    "dist/*"
+  ],
   "scripts": {
     "test": "jest",
     "start": "styleguidist server",
@@ -55,14 +64,5 @@
     "ts-loader": "^8.0.12",
     "typescript": "^4.1.3",
     "word-aligner": "^1.0.0"
-  },
-  "name": "single-scripture-rcl",
-  "version": "0.1.1-alpha",
-  "repository": "https://github.com/unfoldingWord-box3/single-scripture-rcl.git",
-  "author": "RoyalSix <jay.a.scottjr@biola.edu>",
-  "license": "MIT",
-  "main": "dist/index.js",
-  "files": [
-    "dist/*"
-  ]
+  }
 }
