--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "single-scripture-rcl",
-  "version": "0.1.1-alpha.4",
+  "version": "0.1.1-alpha.5",
   "repository": "https://github.com/unfoldingWord-box3/single-scripture-rcl.git",
   "author": "RoyalSix <jay.a.scottjr@biola.edu>",
   "license": "MIT",
@@ -20,7 +20,8 @@
     "@material-ui/lab": "4.0.0-alpha.56",
     "prop-types": "^15.x",
     "react": "^17.x",
-    "react-dom": "^17.x"
+    "react-dom": "^17.x",
+    "scripture-resources-rcl": "^3.x"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
@@ -50,6 +51,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-styleguidist": "^11.1.5",
+    "scripture-resources-rcl": "3.0.3-alpha",
     "style-loader": "^2.0.0",
     "webpack": "^4.44.2"
   },
@@ -57,7 +59,6 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "react-docgen-typescript": "^1.20.5",
-    "scripture-resources-rcl": "3.0.2",
     "source-map-loader": "^1.1.3",
     "styled-components": "^5.2.1",
     "translation-helps-rcl": "0.6.5",
