--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "single-scripture-rcl",
-  "version": "0.1.1-alpha.5",
-  "repository": "https://github.com/unfoldingWord-box3/single-scripture-rcl.git",
-  "author": "RoyalSix <jay.a.scottjr@biola.edu>",
+  "description": "A React Component Library for Rendering a Single Scripture Resource.",
+  "version": "0.1.1-alpha.6",
+  "repository": "https://github.com/unfoldingWord/single-scripture-rcl.git",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
