updated scripture-resources-rcl dependency.

--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-styleguidist": "^11.1.5",
-    "scripture-resources-rcl": "3.0.3-alpha",
+    "scripture-resources-rcl": "3.0.3",
     "style-loader": "^2.0.0",
     "webpack": "^4.44.2"
   },
