--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "single-scripture-rcl",
   "description": "A React Component Library for Rendering a Single Scripture Resource.",
   "version": "0.1.2",
-  "repository": "https://github.com/unfoldingWord/single-scripture-rcl.git",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/unfoldingWord/single-scripture-rcl.git"
+  },
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
