--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "single-scripture-rcl",
   "description": "A React Component Library for Rendering a Single Scripture Resource.",
-  "version": "0.1.2",
+  "version": "0.1.3-alpha",
   "repository": {
     "type": "git",
     "url": "https://github.com/unfoldingWord/single-scripture-rcl.git"
@@ -24,7 +24,8 @@
     "prop-types": "^15.x",
     "react": "^17.x",
     "react-dom": "^17.x",
-    "scripture-resources-rcl": "^3.x"
+    "scripture-resources-rcl": "^3.x",
+    "translation-helps-rcl": "^1.x"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
@@ -56,6 +57,7 @@
     "react-styleguidist": "^11.1.5",
     "scripture-resources-rcl": "3.0.3",
     "style-loader": "^2.0.0",
+    "translation-helps-rcl": "1.2.0",
     "webpack": "^4.44.2"
   },
   "dependencies": {
@@ -64,7 +66,6 @@
     "react-docgen-typescript": "^1.20.5",
     "source-map-loader": "^1.1.3",
     "styled-components": "^5.2.1",
-    "translation-helps-rcl": "0.6.5",
     "ts-loader": "^8.0.12",
     "typescript": "^4.1.3",
     "word-aligner": "^1.0.0"
