--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "single-scripture-rcl",
   "description": "A React Component Library for Rendering a Single Scripture Resource.",
-  "version": "0.1.5",
+  "version": "0.1.6-alpha",
   "repository": {
     "type": "git",
     "url": "https://github.com/unfoldingWord/single-scripture-rcl.git"
@@ -57,7 +57,7 @@
     "react-styleguidist": "^11.1.5",
     "scripture-resources-rcl": "3.0.3",
     "style-loader": "^2.0.0",
-    "translation-helps-rcl": "1.2.0",
+    "translation-helps-rcl": "1.3.0-alpha",
     "webpack": "^4.44.2"
   },
   "dependencies": {
