--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "single-scripture-rcl",
   "description": "A React Component Library for Rendering a Single Scripture Resource.",
-  "version": "0.1.7",
+  "version": "0.1.7-alpha.7",
   "repository": {
     "type": "git",
     "url": "https://github.com/unfoldingWord/single-scripture-rcl.git"
@@ -68,6 +68,7 @@
   "dependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "deep-equal": "^2.0.5",
     "react-docgen-typescript": "^1.20.5",
     "source-map-loader": "^1.1.3",
     "styled-components": "^5.2.1",
