--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "single-scripture-rcl",
   "description": "A React Component Library for Rendering a Single Scripture Resource.",
-  "version": "0.1.9-alpha.5",
+  "version": "0.1.9",
   "repository": {
     "type": "git",
     "url": "https://github.com/unfoldingWord/single-scripture-rcl.git"
@@ -60,7 +60,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-styleguidist": "^11.1.5",
-    "scripture-resources-rcl": "3.2.0-alpha",
+    "scripture-resources-rcl": "3.2.0",
     "style-loader": "^2.0.0",
     "translation-helps-rcl": "1.4.0",
     "webpack": "^4.44.2"
