--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "single-scripture-rcl",
   "description": "A React Component Library for Rendering a Single Scripture Resource.",
-  "version": "1.1.0-alpha.9",
+  "version": "1.1.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/unfoldingWord/single-scripture-rcl.git"
@@ -60,7 +60,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-styleguidist": "^11.1.5",
-    "scripture-resources-rcl": "4.1.0-alpha.2",
+    "scripture-resources-rcl": "4.1.0",
     "style-loader": "^2.0.0",
     "translation-helps-rcl": "^1.11.0",
     "webpack": "^4.44.2"
