--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "deep-equal": "^2.0.5",
+    "lodash": "^4.17.21",
     "react-docgen-typescript": "^1.20.5",
     "source-map-loader": "^1.1.3",
     "styled-components": "^5.2.1",
