--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "single-scripture-rcl",
   "description": "A React Component Library for Rendering a Single Scripture Resource.",
-  "version": "2.0.3",
+  "version": "2.0.4-alpha.4",
   "repository": {
     "type": "git",
     "url": "https://github.com/unfoldingWord/single-scripture-rcl.git"
@@ -63,7 +63,7 @@
     "react-styleguidist": "^11.1.5",
     "scripture-resources-rcl": "4.1.1",
     "style-loader": "^2.0.0",
-    "translation-helps-rcl": "^1.11.0",
+    "translation-helps-rcl": "^1.46.18-alpha",
     "webpack": "^4.44.2"
   },
   "dependencies": {
