--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-docgen-typescript": "^1.20.5",
     "source-map-loader": "^1.1.3",
     "styled-components": "^5.2.1",
+    "tc-ui-toolkit": "^5.3.3",
     "ts-loader": "^8.0.12",
     "typescript": "^4.1.3",
     "word-aligner": "^1.0.0"
