--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "single-scripture-rcl",
   "description": "A React Component Library for Rendering a Single Scripture Resource.",
-  "version": "3.0.1",
+  "version": "3.1.0-alpha.2",
   "repository": {
     "type": "git",
     "url": "https://github.com/unfoldingWord/single-scripture-rcl.git"
@@ -74,7 +74,6 @@
     "react-docgen-typescript": "^1.20.5",
     "source-map-loader": "^1.1.3",
     "styled-components": "^5.2.1",
-    "tc-ui-toolkit": "5.3.3",
     "ts-loader": "^8.0.12",
     "typescript": "^4.1.3",
     "word-aligner": "^1.0.0"
