--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-styleguidist": "^11.1.5",
-    "scripture-resources-rcl": "file:.yalc/scripture-resources-rcl",
+    "scripture-resources-rcl": "^5.2.3-alpha",
     "style-loader": "^2.0.0",
     "tc-ui-toolkit": "^5.3.3",
     "translation-helps-rcl": "1.47.0",
