--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "style-loader": "^2.0.0",
     "tc-ui-toolkit": "^5.3.3",
     "translation-helps-rcl": "1.47.0",
+    "usfm-js": "3.4.2",
     "webpack": "^4.44.2",
     "word-aligner": "^1.0.0"
   },
