--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "single-scripture-rcl",
   "description": "A React Component Library for Rendering a Single Scripture Resource.",
-  "version": "3.2.1-alpha.2",
+  "version": "3.2.1-alpha.11",
   "repository": {
     "type": "git",
     "url": "https://github.com/unfoldingWord/single-scripture-rcl.git"
@@ -37,6 +37,7 @@
     "@babel/preset-react": "^7.12.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@jest/globals": "^29.4.2",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
@@ -73,6 +74,7 @@
     "style-loader": "^2.0.0",
     "tc-ui-toolkit": "^5.3.3",
     "translation-helps-rcl": "/Users/blm/Development/RCL/translation-helps-rcl/translation-helps-rcl-v3.3.6-alpha.tgz",
+    "ts-jest": "^29.0.5",
     "use-deep-compare-effect": "1.8.1",
     "usfm-js": "3.4.2",
     "webpack": "^4.44.2",
@@ -88,6 +90,7 @@
     "styled-components": "^5.2.1",
     "ts-loader": "^8.0.12",
     "typescript": "^4.1.3",
-    "word-aligner": "^1.0.0"
+    "word-aligner": "^1.0.0",
+    "wordmap-lexer": "0.3.6"
   }
 }
