--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "react-dom": "^17.x",
     "scripture-resources-rcl": "^5.2.0",
     "tc-ui-toolkit": "^5.3.3",
-    "translation-helps-rcl": "^1.x",
-    "word-aligner": "^1.0.0"
+    "translation-helps-rcl": "^1.x"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
@@ -73,12 +72,11 @@
     "scripture-resources-rcl": "^5.2.0",
     "style-loader": "^2.0.0",
     "tc-ui-toolkit": "^5.3.3",
-    "translation-helps-rcl": "/Users/blm/Development/RCL/translation-helps-rcl/translation-helps-rcl-v3.3.6-alpha.tgz",
+    "translation-helps-rcl": "file:.yalc/translation-helps-rcl",
     "ts-jest": "^29.0.5",
     "use-deep-compare-effect": "1.8.1",
     "usfm-js": "3.4.2",
-    "webpack": "^4.44.2",
-    "word-aligner": "^1.0.0"
+    "webpack": "^4.44.2"
   },
   "dependencies": {
     "@types/react": "^17.0.0",
@@ -90,7 +88,6 @@
     "styled-components": "^5.2.1",
     "ts-loader": "^8.0.12",
     "typescript": "^4.1.3",
-    "word-aligner": "^1.0.0",
-    "wordmap-lexer": "0.3.6"
+    "word-aligner-rcl": "file:.yalc/word-aligner-rcl"
   }
 }
