--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "single-scripture-rcl",
   "description": "A React Component Library for Rendering a Single Scripture Resource.",
-  "version": "3.2.1-alpha.11",
+  "version": "3.2.1-alpha.12",
   "repository": {
     "type": "git",
     "url": "https://github.com/unfoldingWord/single-scripture-rcl.git"
@@ -88,6 +88,6 @@
     "styled-components": "^5.2.1",
     "ts-loader": "^8.0.12",
     "typescript": "^4.1.3",
-    "word-aligner-rcl": "file:.yalc/word-aligner-rcl"
+    "word-aligner-rcl": "0.0.3-alpha.2"
   }
 }
