--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "single-scripture-rcl",
   "description": "A React Component Library for Rendering a Single Scripture Resource.",
-  "version": "3.2.1-alpha.12",
+  "version": "3.2.1-alpha.13",
   "repository": {
     "type": "git",
     "url": "https://github.com/unfoldingWord/single-scripture-rcl.git"
@@ -21,6 +21,7 @@
     "@material-ui/core": "4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "4.0.0-alpha.56",
+    "bible-reference-range": "^1.1.0",
     "prop-types": "^15.x",
     "react": "^17.x",
     "react-dom": "^17.x",
@@ -48,6 +49,7 @@
     "@unfoldingword/eslint-config": "1.3.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "bible-reference-range": "^1.1.0",
     "core-js": "3.7.0",
     "css-loader": "^5.0.1",
     "eslint": "^7.16.0",
