--- a/package.json
+++ b/package.json
@@ -90,6 +90,6 @@
     "styled-components": "^5.2.1",
     "ts-loader": "^8.0.12",
     "typescript": "^4.1.3",
-    "word-aligner-rcl": "/Users/blm/Development/Misc2/word-aligner-rcl/word-aligner-rcl-v0.9.1-beta.8.tgz"
+    "word-aligner-rcl": "0.9.1-beta.10"
   }
 }
