working on save support

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "4.0.0-alpha.56",
     "bible-reference-range": "^1.1.0",
+    "gitea-react-toolkit": "^1.11.0",
     "prop-types": "^15.x",
     "react": "^17.x",
     "react-dom": "^17.x",
@@ -66,6 +67,7 @@
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "gitea-react-toolkit": "1.11.0",
     "jest": "^26.6.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
