--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "deep-equal": "^2.0.5",
     "lodash": "^4.17.21",
     "react-docgen-typescript": "^1.20.5",
+    "react-icons": "^4.8.0",
     "source-map-loader": "^1.1.3",
     "styled-components": "^5.2.1",
     "ts-loader": "^8.0.12",
