--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "single-scripture-rcl",
   "description": "A React Component Library for Rendering a Single Scripture Resource.",
-  "version": "3.2.0",
+  "version": "3.2.1-beta.3",
   "repository": {
     "type": "git",
     "url": "https://github.com/unfoldingWord/single-scripture-rcl.git"
@@ -21,13 +21,14 @@
     "@material-ui/core": "4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "4.0.0-alpha.56",
+    "bible-reference-range": "^1.1.0",
+    "gitea-react-toolkit": "^1.11.0",
     "prop-types": "^15.x",
     "react": "^17.x",
     "react-dom": "^17.x",
     "scripture-resources-rcl": "^5.2.0",
     "tc-ui-toolkit": "^5.3.3",
-    "translation-helps-rcl": "^1.x",
-    "word-aligner": "^1.0.0"
+    "translation-helps-rcl": "^3.3.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
@@ -35,13 +36,21 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-flow": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@jest/globals": "^29.4.2",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@mui/icons-material": "5.11.0",
+    "@mui/lab": "5.0.0-alpha.119",
+    "@mui/material": "5.11.8",
+    "@mui/styles": "5.11.7",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@unfoldingword/eslint-config": "1.3.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "bible-reference-range": "^1.1.0",
     "core-js": "3.7.0",
     "css-loader": "^5.0.1",
     "eslint": "^7.16.0",
@@ -58,6 +67,7 @@
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "gitea-react-toolkit": "1.11.0",
     "jest": "^26.6.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
@@ -66,9 +76,11 @@
     "scripture-resources-rcl": "^5.2.0",
     "style-loader": "^2.0.0",
     "tc-ui-toolkit": "^5.3.3",
-    "translation-helps-rcl": "1.47.0",
-    "webpack": "^4.44.2",
-    "word-aligner": "^1.0.0"
+    "translation-helps-rcl": "3.3.6-beta.2",
+    "ts-jest": "^29.0.5",
+    "use-deep-compare-effect": "1.8.1",
+    "usfm-js": "3.4.2",
+    "webpack": "^4.44.2"
   },
   "dependencies": {
     "@types/react": "^17.0.0",
@@ -76,10 +88,11 @@
     "deep-equal": "^2.0.5",
     "lodash": "^4.17.21",
     "react-docgen-typescript": "^1.20.5",
+    "react-icons": "^4.8.0",
     "source-map-loader": "^1.1.3",
     "styled-components": "^5.2.1",
     "ts-loader": "^8.0.12",
     "typescript": "^4.1.3",
-    "word-aligner": "^1.0.0"
+    "word-aligner-rcl": "0.9.2"
   }
 }
