--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "single-scripture-rcl",
   "description": "A React Component Library for Rendering a Single Scripture Resource.",
-  "version": "3.3.1-alpha.24",
+  "version": "3.3.1-beta",
 
   "repository": {
     "type": "git",
