--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "single-scripture-rcl",
   "description": "A React Component Library for Rendering a Single Scripture Resource.",
-  "version": "3.3.1",
+  "version": "3.3.2",
   "repository": {
     "type": "git",
     "url": "https://github.com/unfoldingWord/single-scripture-rcl.git"
@@ -15,7 +15,8 @@
     "test": "jest",
     "start": "styleguidist server",
     "build": "styleguidist build",
-    "prepublishOnly": "rm -fr ./dist && babel ./src --out-dir ./dist -s inline --extensions \".ts,.tsx,.js\""
+    "prepublishOnly": "rm -fr ./dist && babel ./src --out-dir ./dist -s inline --extensions \".ts,.tsx,.js\"",
+    "pack-next": "yarn version && yarn && yarn run prepublishOnly && yarn pack"
   },
   "peerDependencies": {
     "@material-ui/core": "4.11.0",
@@ -26,10 +27,12 @@
     "prop-types": "^15.x",
     "react": "^17.x",
     "react-dom": "^17.x",
+    "react-icons": "^4.8.0",
     "scripture-resources-rcl": "^5.2.0",
     "tc-ui-toolkit": "^5.3.3",
     "translation-helps-rcl": "^3.3.5",
-    "word-aligner": "^1.0.0"
+    "word-aligner": "^1.0.0",
+    "word-aligner-rcl": "^0.9.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
@@ -73,6 +76,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.8.0",
     "react-styleguidist": "^11.1.5",
     "scripture-resources-rcl": "^5.2.0",
     "style-loader": "^2.0.0",
@@ -82,7 +86,8 @@
     "use-deep-compare-effect": "1.8.1",
     "usfm-js": "3.4.2",
     "webpack": "^4.44.2",
-    "word-aligner": "^1.0.0"
+    "word-aligner": "^1.0.0",
+    "word-aligner-rcl": "0.9.2"
   },
   "dependencies": {
     "@types/react": "^17.0.0",
@@ -90,11 +95,9 @@
     "deep-equal": "^2.0.5",
     "lodash": "^4.17.21",
     "react-docgen-typescript": "^1.20.5",
-    "react-icons": "^4.8.0",
     "source-map-loader": "^1.1.3",
     "styled-components": "^5.2.1",
     "ts-loader": "^8.0.12",
-    "typescript": "^4.1.3",
-    "word-aligner-rcl": "0.9.2"
+    "typescript": "^4.1.3"
   }
 }
