--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "single-scripture-rcl",
   "description": "A React Component Library for Rendering a Single Scripture Resource.",
-  "version": "3.3.3-patch.1",
+  "version": "3.3.3-beta.11",
   "repository": {
     "type": "git",
     "url": "https://github.com/unfoldingWord/single-scripture-rcl.git"
@@ -31,9 +31,9 @@
     "scripture-resources-rcl": "^5.2.0",
     "tc-ui-toolkit": "^5.3.3",
     "translation-helps-rcl": "^3.3.5",
+    "uw-quote-helpers": "^0.0.1-beta.6",
     "word-aligner": "^1.0.0",
-    "word-aligner-rcl": "^0.9.2",
-    "uw-quote-helpers": "^0.0.1-beta.6"
+    "word-aligner-rcl": "^0.9.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
