--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "single-scripture-rcl",
   "description": "A React Component Library for Rendering a Single Scripture Resource.",
-  "version": "3.3.3-beta.12",
+  "version": "3.3.3-beta.13",
   "repository": {
     "type": "git",
     "url": "https://github.com/unfoldingWord/single-scripture-rcl.git"
@@ -98,7 +98,6 @@
     "source-map-loader": "^1.1.3",
     "styled-components": "^5.2.1",
     "ts-loader": "^8.0.12",
-    "typescript": "^4.1.3",
-    "uw-quote-helpers": "^0.0.1-beta.6"
+    "typescript": "^4.1.3"
   }
 }
