--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "single-scripture-rcl",
   "description": "A React Component Library for Rendering a Single Scripture Resource.",
-  "version": "3.3.3-beta.30",
+  "version": "3.3.3-beta.40",
   "repository": {
     "type": "git",
     "url": "https://github.com/unfoldingWord/single-scripture-rcl.git"
@@ -32,9 +32,8 @@
     "tc-ui-toolkit": "^5.3.3",
     "translation-helps-rcl": "^3.3.5",
     "word-aligner": "^1.0.0",
-    "word-aligner-rcl": "^0.9.2",
-    "uw-quote-helpers": "^0.0.1-beta.6"
-  },
+    "word-aligner-rcl": "^0.9.2"
+    },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
     "@babel/core": "^7.12.3",
@@ -86,7 +85,6 @@
     "ts-jest": "^29.0.5",
     "use-deep-compare-effect": "1.8.1",
     "usfm-js": "3.4.2",
-    "uw-quote-helpers": "^0.0.1-beta.6",
     "webpack": "^4.44.2",
     "word-aligner": "^1.0.0",
     "word-aligner-rcl": "0.9.2"
