--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react-icons": "^4.8.0",
     "scripture-resources-rcl": "^5.2.0",
     "tc-ui-toolkit": "^5.3.3",
-    "translation-helps-rcl": "^3.3.11",
+    "translation-helps-rcl": "^3.4.0-beta.3",
     "word-aligner": "^1.0.0",
     "word-aligner-rcl": "^0.9.2"
   },
