--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react-icons": "^4.8.0",
     "scripture-resources-rcl": "^5.2.0",
     "tc-ui-toolkit": "^5.3.3",
-    "translation-helps-rcl": "^3.4.0",
+    "translation-helps-rcl": "^3.4.2-beta",
     "word-aligner": "^1.0.0",
     "word-aligner-rcl": "^0.9.2"
   },
@@ -81,7 +81,7 @@
     "scripture-resources-rcl": "^5.2.0",
     "style-loader": "^2.0.0",
     "tc-ui-toolkit": "^5.3.3",
-    "translation-helps-rcl": "file:.yalc/translation-helps-rcl",
+    "translation-helps-rcl": "^3.4.2-beta",
     "ts-jest": "^29.0.5",
     "use-deep-compare-effect": "1.8.1",
     "usfm-js": "3.4.2",
